# Recordly

./: .gitignore  CONTRIBUTING.md  README.md  electron-builder.json5  package.json
electron/: electron-env.d.ts  preload.ts
electron/ipc/: handlers.ts
electron/native/window-list/: CMakeLists.txt
electron/native/window-list/src/: main.cpp
scripts/: build-wgc-capture.mjs  build-window-list.mjs
src/: vite-env.d.ts
src/components/launch/: SourceSelector.module.css  SourceSelector.tsx
src/components/video-editor/: ExportDialog.tsx  VideoEditor.tsx
src/lib/exporter/: annotationRenderer.ts  ffmpegExporter.ts  frameRenderer.ts  gifExporter.ts  index.ts  renderingEnvironment.ts  types.ts  videoExporter.ts
